[package]
name = "edtiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.4"
config = { version = "0.10", default-features=false, features = ['yaml'] }
dirs = "2.0"
lazy_static = "1.4"
regex = "1.3"
ron = "0.5"
serde = { version = "1.0", features = ['derive'] }

[dependencies.winapi]
version = "0.3"
features = ["winuser", "wingdi", "libloaderapi", "errhandlingapi", "shellapi", "winreg"]